--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/clockclok.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/clockclok.png" />
+    <title>Clock</title>
   </head>
   <body>
     <div id="root"></div>
